[package]
name = "ex_17"
version = "0.1.0"
authors = ["royco"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers={path = "c:\\Users\\royco\\learning\\cryptopals\\lib\\helpers"}
once_cell = "*"
rand = "*"
pkcs7 = "*"
openssl = "*"